@@ -70,12 +70,15 @@
                     </li>
                     <li>
                         <a href="#edit-product">How do I edit a product's information (possibly to make that irritating red box go away!)?</a>
-                    </li
+                    </li>
                     <li>
                         <a href="#add-product-picture">How do I add a picture to a product?</a>
                     </li>
                     <li>
                         <a href="#add-product">How do I add a new product?</a>
+                    </li>
+                    <li>
+                        <a href="#product-code">What is the significance of a product's code?</a>
                     </li>
                     <li>
                         <a href="#delete-product">How do I delete a product completely from the database?</a>
@@ -348,8 +351,10 @@
                         <li>Select the <a href="{% url 'ims:products' %}">Products</a> menu item</li>
                         <li>Page through the list of products and click on the desired product.  
                         This will take you to the Product Details page.</li>
-                        <li>Enter new product information in the product box.</li>
-                        <li>When finished, hit "Save Product" in the upper left corner of the 
+                        <li>Enter new product information in the product box.  If desired, a new random <a href="#product-code" >product code</a> 
+                        can be generated by clicking the "Generate Code" button in the upper left corner
+                        of the product box.</li>
+                        <li>When finished, hit "Save Product" in the upper right corner of the
                         product box.</li>
                         <li>If required information is missing, you will be prompted to enter it before saving.  
                         Simply entering "none" in the missing information field is sufficient to allow the product to be saved.  
@@ -377,10 +382,24 @@
                     <ol>
                         <li>Select the <a href="{% url 'ims:products' %}">Products</a> menu item</li>
                         <li>Click on the "Add" button in the upper right corner of the products list.</li>
-                        <li>Fill in the information and hit "Save Product" in the upper left corner of the product box.</li>
+                        <li>Fill in the information.</li>
+                        <li>If the product has a meaningful SKU or model number, enter it in the "code" field.  If not, a new random <a href="#product-code" >product code</a> 
+                        can be generated by clicking the "Generate Code" button in the upper left corner
+                        of the product box.</li>
+                        <li>Hit "Save Product" in the upper left corner of the product box.</li>
                         <li>If required information is missing, you will be prompted to enter it before saving.  
-                        Simply entering "none" in the missing information field is sufficient to allow the product to be saved.  
+                        For all required fields except "code", simply entering "none" in the missing information field is
+                        sufficient to allow the product to be saved.
                         It is preferable to enter the correct information if it is available.</li>
+                    </ol>
+            </li>
+            <li>
+                <a name="product-code"><span class="h4-font">What is the significance of a product's code?</span></a>
+                    <ol>
+                        <li>Each product has a unique code that identifies it in the database.</li>
+                        <li>This code can be something meaningful to the user, like a SKU or model number.</li>
+                        <li>If there is no meaningful SKU or model number for a particular product, 
+                        a random code can be an automatically generated using the "Generate Code" button.</li>
                     </ol> 
             </li>
             <li>
@@ -542,4 +561,3 @@
         </ul>
     </div>
 {% endblock content %}
-<li>
