@@ -6,3 +6,5 @@
 * 220ec01 feat:add VERSION so we have a single source of version information
 10/11/2015 Version 1.3.0:
 * 1ea44ad (HEAD, master) feat: add date and comments to version information
+12/11/2015 Version 1.3.1:
+* 007f350 (HEAD, master) add help on product code explanation and generation
